--- a/index.html
+++ b/index.html
@@ -261,6 +261,31 @@
 </form>
 </div>
 
+
+
+            <div class="row">
+                  <div class="col-md-6 col-md-offset-3">
+                      <div class="contact-form">
+                          <h3>Contact Us</h3>
+                          <form id="main-contact-form" name="contact-form" method="post" action="contact-form-handler.php">
+                              <div class="form-group">
+                                  <input type="text" name="name" class="form-control" placeholder="Name" required>
+                              </div>
+                              <div class="form-group">
+                                  <input type="email" name="email" class="form-control" placeholder="Email" required>
+                              </div>
+                              <!-- <div class="form-group">
+                                  <input type="text" name="subject" class="form-control" placeholder="Subject" required>
+                              </div> -->
+                              <div class="form-group">
+                                  <textarea name="message" class="form-control" rows="8" placeholder="Message" required></textarea>
+                              </div>
+                              <button type="submit" id="submit" name="submit" value="Send" class="btn btn-primary">Send Message</button>
+                          </form>
+                      </div>
+                  </div>
+              </div>
+
    <footer class="footer-padding bg-color-light">
         
 
